--- a/crates/holochain_p2p/Cargo.toml
+++ b/crates/holochain_p2p/Cargo.toml
@@ -25,6 +25,7 @@ kitsune_p2p = { version = "0.0.39", path = "../kitsune_p2p/kitsune_p2p" }
 kitsune_p2p_types = { version = "0.0.27", path = "../kitsune_p2p/types" }
 mockall = "0.10.2"
 observability = "0.1.3"
+parking_lot = "0.10"
 rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
