--- a/crates/holochain/Cargo.toml
+++ b/crates/holochain/Cargo.toml
@@ -86,6 +86,10 @@ holochain_test_wasm_common = { version = "0.0.42", path = "../test_utils/wasm_co
 unwrap_to = { version = "0.1.0", optional = true }
 itertools = { version = "0.10", optional = false }
 
+# chc deps
+bytes = { version = "1", optional = true }
+reqwest = { version = "0.11.2", optional = true }
+
 [target.'cfg(unix)'.dependencies]
 sd-notify = "0.3.0"
 
@@ -171,4 +175,7 @@ no-deps = ['holochain_sqlite/no-deps']
 wasmer_debug_memory = ["holochain_wasmer_host/debug_memory"]
 
 # Enable chain head coordination
-chc = []
+chc = [
+  "bytes",
+  "reqwest"
+]
