--- a/crates/holochain_types/Cargo.toml
+++ b/crates/holochain_types/Cargo.toml
@@ -61,6 +61,9 @@ arbitrary = { version = "1.0", features = ["derive"], optional = true}
 # contrafact
 contrafact = { version = "0.1.0-dev.1", optional = true }
 
+# chc
+reqwest = { version = "0.11.2", optional = true }
+
 [dev-dependencies]
 arbitrary = "1.0"
 maplit = "1"
@@ -80,4 +83,6 @@ test_utils = [
   "mr_bundle/arbitrary",
   "holochain_zome_types/test_utils",
 ]
-chc = []
+chc = [
+  "reqwest"
+]
