--- a/.github/actions/release.yml
+++ b/.github/actions/release.yml
@@ -4,10 +4,9 @@ permissions:
   contents: write
 
 on:
-  [push]
-  # :
-  #   tags:
-  #     - v[0-9]+.*
+  push:
+    tags:
+      - v[0-9]+.*
 
 jobs:
   # create-release:
@@ -26,11 +25,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: taiki-e/upload-rust-binary-action@v1
-        with:
-          # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
-          # Note that glob pattern is not supported yet.
-          bin: holochain, hc, hc-app, hc-dna, hc-sandbox, hc-web-app, kd, kitsune-bootstrap, kitsune-p2p-tx2-proxy, proxy-tx2-cli
-        env:
-          # (required) GitHub token for uploading assets to GitHub Releases.
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: taiki-e/upload-rust-binary-action@v1
+      #   with:
+      #     # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
+      #     # Note that glob pattern is not supported yet.
+      #     bin: holochain, hc, hc-app, hc-dna, hc-sandbox, hc-web-app, kd, kitsune-bootstrap, kitsune-p2p-tx2-proxy, proxy-tx2-cli
+      #   env:
+      #     # (required) GitHub token for uploading assets to GitHub Releases.
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: cargo build --release
