--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -1,12 +1,19 @@
 name: HoloRelease
 
+on:
+  push:
+    branches: [ "gh-release" ]
+
+env:
+  CARGO_TERM_COLOR: always
+  
 permissions:
   contents: write
 
-on:
-  push:
-    tags:
-      - test-v[0-9]+.*
+# on:
+#   push:
+#     tags:
+#       - test-v[0-9]+.*
 
 jobs:
   # create-release:
