--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -10,12 +10,12 @@ env:
 permissions:
   contents: write
 
-on:
-  push:
-    branches:
-      - gh-release
-    # tags:
-      # - test-v[0-9]+.*
+on: release
+  # push:
+  #   branches:
+  #     - gh-release
+  #   # tags:
+  #     # - test-v[0-9]+.*
 
 jobs:
   # create-release:
@@ -34,14 +34,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - uses: taiki-e/upload-rust-binary-action@v1
-      #   with:
-      #     # archive: holochain-$target
-      #     # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
-      #     # Note that glob pattern is not supported yet.
-      #     bin: holochain
-      #     # ,hc,hc-app,hc-dna,hc-sandbox,hc-web-app,kd,kitsune-bootstrap,kitsune-p2p-tx2-proxy,proxy-tx2-cli
-      #   env:
-      #     # (required) GitHub token for uploading assets to GitHub Releases.
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: cd crates/holochain && cargo build --release
+      - uses: taiki-e/upload-rust-binary-action@v1
+        with:
+          # archive: holochain-$target
+          # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
+          # Note that glob pattern is not supported yet.
+          bin: holochain
+          # ,hc,hc-app,hc-dna,hc-sandbox,hc-web-app,kd,kitsune-bootstrap,kitsune-p2p-tx2-proxy,proxy-tx2-cli
+        env:
+          # (required) GitHub token for uploading assets to GitHub Releases.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - run: cd crates/hc && cargo build --release
+
