--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -10,25 +10,25 @@ env:
 permissions:
   contents: write
 
-on: release
-  # push:
-  #   branches:
-  #     - gh-release
-  #   # tags:
-  #     # - test-v[0-9]+.*
+on: 
+  push:
+    # branches:
+    #   - gh-release
+    tags:
+      - test-v[0-9]+.*
 
 jobs:
-  # create-release:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: taiki-e/create-gh-release-action@v1
-  #       with:
-  #         # (optional) Path to changelog.
-  #         changelog: CHANGELOG.md
-  #       env:
-  #         # (required) GitHub token for creating GitHub Releases.
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: taiki-e/create-gh-release-action@v1
+        # with:
+          # (optional) Path to changelog.
+          # changelog: CHANGELOG.md
+        env:
+          # (required) GitHub token for creating GitHub Releases.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   upload-assets:
     runs-on: ubuntu-latest
@@ -39,7 +39,7 @@ jobs:
           # archive: holochain-$target
           # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
           # Note that glob pattern is not supported yet.
-          bin: holochain
+          bin: holochain,hc
           # ,hc,hc-app,hc-dna,hc-sandbox,hc-web-app,kd,kitsune-bootstrap,kitsune-p2p-tx2-proxy,proxy-tx2-cli
         env:
           # (required) GitHub token for uploading assets to GitHub Releases.
