--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -1,3 +1,4 @@
+name: Upload Release Asset
 
 on:
   push:
@@ -5,17 +6,16 @@ on:
     tags:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
-name: Upload Release Asset
 
 jobs:
   build:
-    name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - run: mkdir /tmp/build
-      - name: Build project # This would actually build your project, using zip for an example artifact
+      - name: make tmp dir
+        run: mkdir /tmp/build
+      - name: Build hc
         run: cd crates/hc && cargo build --release && cp target/release/hc /tmp/build
       - name: Create Release
         id: create_release
