--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -7,6 +7,9 @@ on:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 
+env:
+  CARGO_TERM_COLOR: always
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,7 +19,11 @@ jobs:
       - name: make tmp dir
         run: mkdir /tmp/build
       - name: Build hc
-        run: cd crates/hc && cargo build --release && cp target/release/hc /tmp/build
+        run: cargo build --release
+      - name: check it out
+        run: ls -R target
+      - name: Copy artifacts
+        run: cp target/release/holochain /tmp/build
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
