--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -17,13 +17,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: make tmp dir
-        run: mkdir /tmp/build
+        run: mkdir ./build
       - name: Build hc
         run: cargo build --release
-      - name: check it out
-        run: ls -R target
       - name: Copy artifacts
-        run: cp target/release/holochain /tmp/build
+        run: cp target/release/holochain ./build/
+      - name: check it out
+        run: |
+          tar czvf holochain-${{ github.ref }}.tar.gz ./build/*
+          ls target/release
+          ls -l ./build
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -41,6 +44,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: /tmp/build/hc
-          asset_name: hc
+          asset_path: holochain-${{ github.ref }}.tar.gz
+          asset_name: holochain-${{ github.ref }}.tar.gz
           asset_content_type: application/zip
