--- a/.github/workflows/naive-release.yml
+++ b/.github/workflows/naive-release.yml
@@ -9,7 +9,8 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  
+  TAR_NAME: holochain-$GITHUB_REF_NAME.tar.gz 
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +25,7 @@ jobs:
         run: cp target/release/holochain ./build/
       - name: check it out
         run: |
-          tar czvf holochain-$(basename ${{ github.ref }}).tar.gz ./build/*
+          tar czvf $TAR_NAME ./build/*
           ls target/release
           ls -l ./build
       - name: Create Release
@@ -44,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: holochain-$(basename ${{ github.ref }}).tar.gz
-          asset_name: holochain-$(basename ${{ github.ref }}).tar.gz
+          asset_path: $TAR_NAME
+          asset_name: $TAR_NAME
           asset_content_type: application/zip
